Fix dropdown menu and collapse toggle

--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -11,11 +11,7 @@ p {
   font-size: 1.2rem;
 }
 
-.container .navbar-brand {
-  font-size: 1.5rem;
-}
-
-.container .nav-item.nav-link {
+.container .nav-link {
   font-size: 1.5rem;
 
 }
